# pkr

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: check.yml  release.yml
doc/: drivers.md  examples.md  installation.md  quickstart.md  reference.md
doc/demo/env/common/: env.yml
doc/demo/env/dev/: env.yml
doc/demo/env/prod/: env.yml
doc/demo/env/test/: env.yml
doc/demo/templates/: docker-compose-test.yml.template  docker-compose.yml.template  macros.jinja
doc/demo/templates/dockerfiles/: app.dockerfile.template  test.dockerfile.template
doc/sample/simple/app/: __main__.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
pkr/: __main__.py  context.py  environment.py  kard.py  utils.py  version.py
pkr/cli/: action.py  log.py  parser.py  shell.py
pkr/driver/: __init__.py  base.py  buildx.py  buildx_compose.py  buildx_k8s.py  docker.py  docker_base.py  docker_compose.py  k8s.py  minikube.py
pkr/ext/: __init__.py  auto_volume.py  basic_template.py  git.py
sample/simple/app/: __main__.py
sample/simple/etc/: nginx.conf
sample/simple/templates/compose/: docker-compose.yml.template
sample/simple/templates/dockerfiles/: myApp.dockerfile.template  nginx.dockerfile.template
test/: test_base_driver.py  test_buildx_driver.py  test_cli.py  test_compose.py  test_docker_driver.py  test_driver.py  test_environment.py  test_ext.py  test_kard.py  test_parser.py  test_utils.py  utils.py
test/files/: meta1.yml
test/files/base_driver/env/dev/: env.yml
test/files/container_format_v2/env/dev/: env.yml
test/files/container_format_v2/templates/dockerfiles/: file1.dockerfile.template
test/files/docker_driver/env/contexts/: env.yml
test/files/docker_driver/env/dev/: env.yml
test/files/env1/dev/: e.yml  env.yml
test/files/env2/common/: env.yml
test/files/env2/dev/: env.yml
test/files/env2/prod/: env.yml
test/files/ext/: meta1.yml
test/files/ext/env/test/: env.yml
test/files/ext/extensions/: ext_mock.py
test/files/path1/: meta1.yml
test/files/path1/env/dev/: e.yml  env.yml
test/files/path1/templates/dockerfiles/backend/: exec.sh.template
test/files/path2/env/common/: env.yml
test/files/path2/env/dev/: env.yml
test/files/path2/env/prod/: env.yml
test/files/path2/env/required_meta/: env.yml
test/files/path2/templates/: docker-compose.yml.template  k8s.yml.template
test/files/path2/templates/dockerfiles/: backend.dockerfile.template
test/files/path2/templates/dockerfiles/backend/: backend.conf.template
test/files/path3/env/dev/: compose.yml.template  env.yml
test/files/path4/env/dev/: env.yml
test/files/path4/templates/: docker-compose.yml.template
test/files/path4/templates/dockerfiles/: backend.dockerfile.template
test/files/path4/templates/dockerfiles/backend/: backend.conf.template
test/files/templates1/dockerfiles/backend/: backend.conf.template
test/files/templates2/dockerfiles/backend/: backend.conf.template
