[project]
name = "pkr"
version = "2.0.2"
description = "Template engine for deploying docker containers."
requires-python = ">=3.9, <4"
authors = [ { name = "Altair Engineering", email = "pclm-team@altair.com" } ]
license = {file = "LICENSE"}
readme = "README.md"
classifiers=[
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "docker==7.1.0",
    "importlib-metadata>=0.12",
    "ipaddress==1.0.17",
    "jinja2",
    "jinja2-ansible-filters==1.3.2",
    "kubernetes>=25.0.0",
    "passlib>=1.7.1",
    "pycryptodome==3.19.1",
    "python-on-whales==0.78.0",
    "tenacity>=7.0.0",
    "bcrypt<=4.0.1",
    "pydantic<3",
    "requests==2.32.5",
    "urllib3==2.6.0",
]

[project.optional-dependencies]
dev = [
    "bandit==1.7.4",
    "mock==2.0.0",
    "pytest==7.4.0",
    "tox==4.11.3",
    "wrapt==1.14.0",
]

[project.scripts]
pkr = "pkr.__main__:main"

[project.entry-points.'pkr_extensions']
auto-volume = "pkr.ext.auto_volume:AutoVolume"
basic-template = "pkr.ext.basic_template:BasicTemplate"
